# solid-power

./: CMakeLists.txt  KF5SolidPowerConfig.cmake.in  README.md  metainfo.yaml
src/: CMakeLists.txt  Messages.sh  inhibitions.cpp  inhibitions_p.h  platform.cpp  platform.h  platform_p.h  power_hal.cpp  power_hal_p.h  power_login1.cpp  power_login1_p.h  powermanagement.h
src/test/: CMakeLists.txt  main.cpp
